--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,22 @@
 # dependencies
 node_modules/
 
-# build output
+# build outputs
 dist/
+.vite/
 
 # logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# editor settings
+# editor files
+*.swp
+*.swo
 .vscode/
 .idea/
+
+# system files
 .DS_Store
+Thumbs.db
+
